Work-in-progress FileController will now return JSON:API compliant response on file upload.